// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`render offset pagination component 1`] = `
.c6 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c11 {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c7 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  flex-direction: row;
  display: flex;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c10 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c10:focus {
  outline: none;
}

.c10[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c10+.bd-button {
  margin-top: 0.5rem;
}

.c10:active {
  background-color: #DBE3FE;
}

.c10:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c10:hover:not(:active) {
  background-color: #F0F3FF;
}

.c10[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c8 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c9 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c2 {
  position: relative;
}

.c4 {
  color: #313440;
  width: auto;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c10+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c10 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c0 "
  >
    <div
      class="c0 c2"
    >
      <button
        aria-activedescendant=""
        aria-controls="_r_0_-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c3 c4"
        id="_r_0_-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c5"
        >
          1 - 3 of 10
          <svg
            aria-hidden="true"
            class="c6"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
            />
          </svg>
        </span>
      </button>
      <div
        class="c7"
        style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <div
          class="c8"
        >
          <ul
            aria-labelledby="_r_0_-label"
            class="c9"
            id="_r_0_-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 "
  >
    <button
      class="c10 c4"
      disabled=""
      type="button"
    >
      <span
        class="c5"
      >
        <svg
          aria-labelledby="_r_4_"
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id="_r_4_"
          >
            Previous page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"
          />
        </svg>
      </span>
    </button>
    <button
      class="c10 c4"
      type="button"
    >
      <span
        class="c5"
      >
        <svg
          aria-labelledby="_r_5_"
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id="_r_5_"
          >
            Next page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`render offset pagination component with invalid page info 1`] = `
.c6 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c11 {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c7 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  flex-direction: row;
  display: flex;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c10 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c10:focus {
  outline: none;
}

.c10[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c10+.bd-button {
  margin-top: 0.5rem;
}

.c10:active {
  background-color: #DBE3FE;
}

.c10:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c10:hover:not(:active) {
  background-color: #F0F3FF;
}

.c10[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c8 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c9 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c2 {
  position: relative;
}

.c4 {
  color: #313440;
  width: auto;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c10+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c10 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c0 "
  >
    <div
      class="c0 c2"
    >
      <button
        aria-activedescendant=""
        aria-controls="_r_6_-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c3 c4"
        id="_r_6_-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c5"
        >
          -8 - -6 of 10
          <svg
            aria-hidden="true"
            class="c6"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
            />
          </svg>
        </span>
      </button>
      <div
        class="c7"
        style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <div
          class="c8"
        >
          <ul
            aria-labelledby="_r_6_-label"
            class="c9"
            id="_r_6_-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 "
  >
    <button
      class="c10 c4"
      disabled=""
      type="button"
    >
      <span
        class="c5"
      >
        <svg
          aria-labelledby="_r_a_"
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id="_r_a_"
          >
            Previous page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"
          />
        </svg>
      </span>
    </button>
    <button
      class="c10 c4"
      type="button"
    >
      <span
        class="c5"
      >
        <svg
          aria-labelledby="_r_b_"
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id="_r_b_"
          >
            Next page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`render offset pagination component with invalid range info 1`] = `
.c6 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c11 {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c7 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  flex-direction: row;
  display: flex;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c10 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c10:focus {
  outline: none;
}

.c10[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c10+.bd-button {
  margin-top: 0.5rem;
}

.c10:active {
  background-color: #DBE3FE;
}

.c10:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c10:hover:not(:active) {
  background-color: #F0F3FF;
}

.c10[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c8 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c9 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c2 {
  position: relative;
}

.c4 {
  color: #313440;
  width: auto;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c10+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c10 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c0 "
  >
    <div
      class="c0 c2"
    >
      <button
        aria-activedescendant=""
        aria-controls="_r_c_-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c3 c4"
        id="_r_c_-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c5"
        >
          1 - -5 of 10
          <svg
            aria-hidden="true"
            class="c6"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
            />
          </svg>
        </span>
      </button>
      <div
        class="c7"
        style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <div
          class="c8"
        >
          <ul
            aria-labelledby="_r_c_-label"
            class="c9"
            id="_r_c_-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 "
  >
    <button
      class="c10 c4"
      disabled=""
      type="button"
    >
      <span
        class="c5"
      >
        <svg
          aria-labelledby="_r_g_"
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id="_r_g_"
          >
            Previous page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"
          />
        </svg>
      </span>
    </button>
    <button
      class="c10 c4"
      disabled=""
      type="button"
    >
      <span
        class="c5"
      >
        <svg
          aria-labelledby="_r_h_"
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id="_r_h_"
          >
            Next page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`render offset pagination component with no items 1`] = `
.c6 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c11 {
  vertical-align: middle;
}

.c0 {
  box-sizing: border-box;
}

.c7 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c1 {
  flex-direction: row;
  display: flex;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c3:focus {
  outline: none;
}

.c3[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c3+.bd-button {
  margin-top: 0.5rem;
}

.c3:active {
  background-color: #DBE3FE;
}

.c3:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:hover:not(:active) {
  background-color: #F0F3FF;
}

.c3[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c10 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c10:focus {
  outline: none;
}

.c10[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c10+.bd-button {
  margin-top: 0.5rem;
}

.c10:active {
  background-color: #DBE3FE;
}

.c10:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c10:hover:not(:active) {
  background-color: #F0F3FF;
}

.c10[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c5 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c8 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c9 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c2 {
  position: relative;
}

.c4 {
  color: #313440;
  width: auto;
}

@media (min-width: 720px) {
  .c3+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c3 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c10+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c10 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  aria-label="pagination"
  class="c0 c1"
  role="navigation"
>
  <div
    class="c0 "
  >
    <div
      class="c0 c2"
    >
      <button
        aria-activedescendant=""
        aria-controls="_r_i_-menu"
        aria-expanded="false"
        aria-haspopup="menu"
        class="c3 c4"
        id="_r_i_-toggle-button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="c5"
        >
          0 of 0
          <svg
            aria-hidden="true"
            class="c6"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
            />
          </svg>
        </span>
      </button>
      <div
        class="c7"
        style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px);"
      >
        <div
          class="c8"
        >
          <ul
            aria-labelledby="_r_i_-label"
            class="c9"
            id="_r_i_-menu"
            role="menu"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="c0 "
  >
    <button
      class="c10 c4"
      disabled=""
      type="button"
    >
      <span
        class="c5"
      >
        <svg
          aria-labelledby="_r_m_"
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id="_r_m_"
          >
            Previous page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"
          />
        </svg>
      </span>
    </button>
    <button
      class="c10 c4"
      disabled=""
      type="button"
    >
      <span
        class="c5"
      >
        <svg
          aria-labelledby="_r_n_"
          class="c11"
          fill="currentColor"
          height="24"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="24"
        >
          <title
            id="_r_n_"
          >
            Next page
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
